# trello-python-cfd

./: .gitconfig  .gitignore  Actions from Trello.ipynb  All History Actions from Trello.ipynb  LICENSE  pyproject.toml  scratch_notes.md  test.ipynb  updaed Trello.ipynb  updated Trello.ipynb
.devcontainer/: devcontainer.json
.github/: dependabot.yml
