[tool.poetry]
name = "trello-python-cfd"
version = "0.1.0"
description = ""
authors = ["John Stephenson <johnnyfleet@gmail.com>"]
readme = "README.md"
packages = [{include = "trello_python_cfd"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"
requests = "^2.31.0"
pandas = "^2.2.0"
nbconvert = "^7.14.2"
requests-oauthlib = "^1.3.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
