[tool.poetry]
name = "trello-python-cfd"
version = "0.1.0"
description = ""
authors = ["John Stephenson <johnnyfleet@gmail.com>"]
readme = "README.md"
packages = [{include = "trello_python_cfd"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
requests = "^2.32.3"
pandas = "^2.2.2"
nbconvert = "^7.16.4"
requests-oauthlib = "^2.0.0"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
